Added favicon to "index.html"

--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <head>
     <link rel="stylesheet" href="stylesheet.css">
+
+    <!-- Site Info For Browser-->
+    <title>Nyx</title>
+    <link rel="icon" type="image/x-icon" href="./assets/favicon.png">
 </head>
 <header>
     <a href="index.html"><img id="logo" src="assets/logo.png"></a>
